<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MenuUtama">

    <Button
        android:id="@+id/btn_petunjuk"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/petunjuk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_karier"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/karier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_petunjuk" />

    <Button
        android:id="@+id/btn_tentang"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tentang_aplikar"
        app:layout_constraintBottom_toTopOf="@+id/btn_petunjuk"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_biografi"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/biografi"
        app:layout_constraintBottom_toTopOf="@+id/btn_karier"
        app:layout_constraintStart_toEndOf="@+id/btn_tentang" />

    <TextView
        android:id="@+id/tx_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@android:color/holo_orange_dark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="0.01"
        android:text="@string/aplikar"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_off"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:icon="@android:drawable/ic_lock_power_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>